fix contrast address error

--- a/style.css
+++ b/style.css
@@ -1074,3 +1074,7 @@ h4 {
 .footer__title {
     font-size: 1.3rem;
 }
+
+.address {
+    color: #000;
+}
